welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:-6: error: Missing closing brace `}' assumed here
try {
^alarmClock:1: error: expected class or object definition
def alarmClock(day:Int, vacation:Boolean): String = {
^